# upstage-network-lecture

./: Dockerfile  docker-compose.yml  main.py  pyproject.toml
.github/ISSUE_TEMPLATE/: deploy-ec2.yml
.github/workflows/: deploy-ec2.yml
app/: deps.py  exceptions.py  logging.py
app/api/route/: user_routers.py
app/models/: __init__.py
app/repository/: user_repo.py
app/schemas/: user.py
app/service/: user_service.py
tests/: test_easy.py
