[project]
name = "upstage-network-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.122.0",
    "loguru>=0.7.2",
    "uvicorn[standard]>=0.38.0",
    "mysql-connector-python>=8.4.0",
    "SQLAlchemy>=2.0.29",
    "PyMySQL>=1.1.0",
    "python-dotenv>=1.0.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
